# xdg-desktop-portal-hyprland

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  flake.nix  hyprland.portal  meson.build  meson_options.txt  org.freedesktop.impl.portal.desktop.hyprland.service  org.freedesktop.impl.portal.desktop.hyprland.service.in
.github/workflows/: nix-build.yaml
contrib/systemd/: xdg-desktop-portal-hyprland.service  xdg-desktop-portal-hyprland.service.in
hyprland-share-picker/: CMakeLists.txt  Makefile  Parsers.cpp  Parsers.hpp  Picker.cpp  Picker.hpp  README.md  defines.hpp  elidedbutton.cpp  elidedbutton.h  go.sum  main.cpp  main.go  mainpicker.h  mainpicker.ui  meson.build  screenview.cpp  screenview.h  shell.nix  tests_parsers.cpp
hyprland-share-picker/cmake/: golang.cmake
hyprland-share-picker/src/: meson.build
hyprland-share-picker/src/pkg/: meson.build
hyprland-share-picker/src/pkg/notebook/: create.go
hyprland-share-picker/src/pkg/region/: create.go  create_drawing_region.go  type.go
hyprland-share-picker/src/pkg/screen/: create.go  get_screen_list.go  meson.build  type.go
hyprland-share-picker/src/pkg/tools/: create_button.go  scrollable_box.go
hyprland-share-picker/src/pkg/window/: create.go  get_window_list.go  meson.build  type.go
include/: global_shortcuts.h  screencast_common.h  utils.h  xdpw.h
nix/: default.nix  hyprland-share-picker.nix  overlays.nix
protocols/: ext-foreign-toplevel-list-v1.xml  hyprland-global-shortcuts-v1-protocol.c  hyprland-global-shortcuts-v1-protocol.h  hyprland-toplevel-export-v1-protocol.c  hyprland-toplevel-export-v1-protocol.h  meson.build  virtual-keyboard-unstable-v1.cpp  wlr-foreign-toplevel-management-unstable-v1-protocol.c  wlr-foreign-toplevel-management-unstable-v1-protocol.h  wlr-screencopy-unstable-v1-protocol.c  wlr-screencopy-unstable-v1-protocol.h
src/: dbusDefines.hpp  main.cpp  meson.build
src/core/: PortalManager.cpp  PortalManager.hpp  main.c  utils.c
src/globalshortcuts/: global_shortcuts.c
src/helpers/: Log.cpp  Log.hpp  MiscFunctions.cpp  MiscFunctions.hpp  Timer.cpp  Timer.hpp
src/portals/: GlobalShortcuts.cpp  GlobalShortcuts.hpp  InputCapture.cpp  InputCapture.hpp  RemoteDesktop.cpp  RemoteDesktop.hpp  Screencopy.cpp  Screencopy.hpp  Screenshot.cpp  Screenshot.hpp  Settings.cpp  Settings.hpp
src/screencast/: pipewire_screencast.c  screencast.c  screencast_common.c  wlr_screencast.c
src/shared/: Eis.cpp  Eis.hpp  ScreencopyShared.cpp  ScreencopyShared.hpp  Session.cpp  Session.hpp  ToplevelManager.cpp  ToplevelManager.hpp  ToplevelMappingManager.cpp  ToplevelMappingManager.hpp
